// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package test_platform.common;

option go_package = "go.chromium.org/chromiumos/infra/proto/go/test_platform/common";

// TaskLogData describes the location at which logs of a test_platform task
// are stored.
message TaskLogData {
    // gs_url is the full google storage URL at which a task's logs are stored.
    string gs_url = 1;
}
